--- a/src/config/config.json
+++ b/src/config/config.json
@@ -14,7 +14,7 @@
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "backend",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
